<resources>
    <string name="app_name">Implicit Intents</string>
    <string name="edittext_uri">http://developer.android.com</string>
    <string name="edittext_loc">Golden Gate Bridge</string>
    <string name="edittext_share">\'Twas brillig and the slithy toves</string>
    <string name="button_uri">Open Website</string>
    <string name="button_loc">Open Location</string>
    <string name="button_share">share This Text</string>
    <string name="chooser_title">\"Share this text with: \"</string>
    <string name="take_picture">TAKE PICTURE</string>
</resources>